--- a/Controls/GoogleAnalyticsJavascript/src/DotVVM.Contrib/DotVVM.Contrib.csproj
+++ b/Controls/GoogleAnalyticsJavascript/src/DotVVM.Contrib/DotVVM.Contrib.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFrameworks>netcoreapp1.0;net451</TargetFrameworks>
 	<PackageId>DotVVM.Contrib.GoogleAnalyticsJavascript</PackageId>
-    <PackageVersion>1.0.0-beta</PackageVersion>
+    <PackageVersion>1.0.0-beta2</PackageVersion>
     <Authors>DotVVM Contrib</Authors>
     <Description>The GoogleAnalyticsJavascript control for DotVVM made by DotVVM Contrib community.</Description>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
