--- a/Controls/CkEditorMinimal/src/DotVVM.Contrib.Samples/DotVVM.Contrib.Samples.csproj
+++ b/Controls/CkEditorMinimal/src/DotVVM.Contrib.Samples/DotVVM.Contrib.Samples.csproj
@@ -1,6 +1,6 @@
 ﻿<Project ToolsVersion="15.0" Sdk="Microsoft.NET.Sdk.Web">
 	<PropertyGroup>
-		<TargetFramework>netcoreapp1.0</TargetFramework>
+		<TargetFramework>netcoreapp2.0</TargetFramework>
 	</PropertyGroup>
 	<ItemGroup>
 		<Content Include="**\*.dothtml" />
@@ -15,9 +15,9 @@
 		<Folder Include="wwwroot\Content\Lib\" />
 	</ItemGroup>
 	<ItemGroup>
-		<PackageReference Include="Microsoft.AspNetCore" Version="1.0.3" />
-		<PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="1.1.0" />
-		<PackageReference Include="DotVVM.AspNetCore" Version="1.1.0.1" />
+    <PackageReference Include="DotVVM.AspNetCore" Version="1.1.6.1" />
+    <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="2.0.0" />
 	</ItemGroup>
   <ItemGroup>
     <DotNetCliToolReference Include="DotVVM.Compiler.Light" Version="1.1.0.1" />
