rename assembly name DotVVM.Contrib.GoogleAnalyticsJavascript

--- a/Controls/GoogleAnalyticsJavascript/src/DotVVM.Contrib/DotVVM.Contrib.csproj
+++ b/Controls/GoogleAnalyticsJavascript/src/DotVVM.Contrib/DotVVM.Contrib.csproj
@@ -18,6 +18,7 @@
     <GenerateAssemblyVersionAttribute>false</GenerateAssemblyVersionAttribute>
     <GenerateAssemblyFileVersionAttribute>false</GenerateAssemblyFileVersionAttribute>
     <PreserveCompilationContext>true</PreserveCompilationContext>
+    <AssemblyName>DotVVM.Contrib.GoogleAnalyticsJavascript</AssemblyName>
   </PropertyGroup>
 
   <ItemGroup>
