--- a/Controls/Select2/src/DotVVM.Contrib/DotVVM.Contrib.csproj
+++ b/Controls/Select2/src/DotVVM.Contrib/DotVVM.Contrib.csproj
@@ -18,6 +18,7 @@
     <GenerateAssemblyVersionAttribute>false</GenerateAssemblyVersionAttribute>
     <GenerateAssemblyFileVersionAttribute>false</GenerateAssemblyFileVersionAttribute>
     <PreserveCompilationContext>true</PreserveCompilationContext>
+    <AssemblyName>DotVVM.Contrib.Select2</AssemblyName>
   </PropertyGroup>
 
   <ItemGroup>
