--- a/Controls/CkEditorMinimal/src/DotVVM.Contrib/DotVVM.Contrib.csproj
+++ b/Controls/CkEditorMinimal/src/DotVVM.Contrib/DotVVM.Contrib.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netcoreapp2.0;net451</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0;net451</TargetFrameworks>
 	<PackageId>DotVVM.Contrib.CkEditorMinimal</PackageId>
     <PackageVersion>1.1.6.1</PackageVersion>
     <Authors>DotVVM Contrib</Authors>
