--- a/Controls/TemplateSelector/src/DotVVM.Contrib/DotVVM.Contrib.csproj
+++ b/Controls/TemplateSelector/src/DotVVM.Contrib/DotVVM.Contrib.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netcoreapp2.0;net451</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0;net451</TargetFrameworks>
 	<PackageId>DotVVM.Contrib.TemplateSelector</PackageId>
     <PackageVersion>1.1.0.1</PackageVersion>
     <Authors>DotVVM Contrib</Authors>
