--- a/Controls/ReactBridge/src/DotVVM.Contrib/DotVVM.Contrib.csproj
+++ b/Controls/ReactBridge/src/DotVVM.Contrib/DotVVM.Contrib.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0;net451</TargetFrameworks>
 	<PackageId>DotVVM.Contrib.ReactBridge</PackageId>
-    <PackageVersion>0.0.1</PackageVersion>
+    <PackageVersion>1.1.8-beta</PackageVersion>
     <Authors>DotVVM Contrib</Authors>
     <Description>The ReactBridge control for DotVVM made by DotVVM Contrib community.</Description>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
