TypeAhead upgraded for dotvvm 2.0

--- a/Controls/TypeAhead/src/DotVVM.Contrib.Tests/App.config
+++ b/Controls/TypeAhead/src/DotVVM.Contrib.Tests/App.config
@@ -1,13 +1,6 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-  <appSettings>
-    <add key="selenium:chromedriver" value="true" />
-    <add key="selenium:firefoxdriver" value="false" />
-    <add key="selenium:InternetExplorerDriver" value="false" />
-    <add key="selenium:baseurl" value="http://localhost:46582/" />
-    <add key="selenium:testattemptscount" value="1" />
-    <add key="selenium:developermode" value="true" />
-    <add key="selenium:fastmode" value="false" />
-    <add key="selenium:LoggingPriorityMaximum" value="10" />
-  </appSettings>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.2"/>
+  </startup>
 </configuration>
