--- a/Controls/_template/src/DotVVM.Contrib.Samples/DotVVM.Contrib.Samples.csproj
+++ b/Controls/_template/src/DotVVM.Contrib.Samples/DotVVM.Contrib.Samples.csproj
@@ -15,9 +15,9 @@
 		<Folder Include="wwwroot\" />
 	</ItemGroup>
 	<ItemGroup>
-		<PackageReference Include="Microsoft.AspNetCore" Version="2.0.0" />
-		<PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="2.0.0" />
-		<PackageReference Include="DotVVM.AspNetCore" Version="1.1.7" />
+		<PackageReference Include="Microsoft.AspNetCore" Version="2.0.1" />
+		<PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="2.0.1" />
+		<PackageReference Include="DotVVM.AspNetCore" Version="2.0.0-beta01" />
 	</ItemGroup>
   <ItemGroup>
     <DotNetCliToolReference Include="DotVVM.Compiler.Light" Version="1.1.6.3" />
