Upgrade all projects to dotvvm 2.0

--- a/Controls/GoogleAnalyticsJavascript/src/DotVVM.Contrib.Tests/App.config
+++ b/Controls/GoogleAnalyticsJavascript/src/DotVVM.Contrib.Tests/App.config
@@ -1,9 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <appSettings>
-    <add key="selenium:chromedriver" value="false" />
+    <add key="selenium:chromedriver" value="true" />
     <add key="selenium:firefoxdriver" value="false" />
-    <add key="selenium:InternetExplorerDriver" value="true" />
+    <add key="selenium:InternetExplorerDriver" value="false" />
     <add key="selenium:baseurl" value="http://localhost:5000/" />
     <add key="selenium:testattemptscount" value="1" />
     <add key="selenium:developermode" value="true" />
