--- a/Controls/GoogleAnalyticsJavascript/src/DotVVM.Contrib.Samples/DotVVM.Contrib.Samples.csproj
+++ b/Controls/GoogleAnalyticsJavascript/src/DotVVM.Contrib.Samples/DotVVM.Contrib.Samples.csproj
@@ -12,9 +12,9 @@
     <Content Include="Views\_master.dotmaster" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore" Version="1.0.3" />
-    <PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="1.1.0" />
-    <PackageReference Include="DotVVM.AspNetCore" Version="1.1.0.1" />
+    <PackageReference Include="Microsoft.AspNetCore" Version="2.0.1" />
+    <PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="2.0.1" />
+    <PackageReference Include="DotVVM.AspNetCore" Version="2.0.0-preview02-25978" />
   </ItemGroup>
   <ItemGroup>
     <DotNetCliToolReference Include="DotVVM.Compiler.Light" Version="1.1.0.1" />
