--- a/Controls/NoUiSlider/src/DotVVM.Contrib/DotVVM.Contrib.csproj
+++ b/Controls/NoUiSlider/src/DotVVM.Contrib/DotVVM.Contrib.csproj
@@ -29,7 +29,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="DotVVM" Version="1.1.8" />
+    <PackageReference Include="DotVVM" Version="2.0.0-preview02-25978" />
     <PackageReference Include="Microsoft.TypeScript.MSBuild" Version="2.3.1" />
   </ItemGroup>
 
