--- a/Controls/ReactBridge/src/DotVVM.Contrib.Samples/DotVVM.Contrib.Samples.csproj
+++ b/Controls/ReactBridge/src/DotVVM.Contrib.Samples/DotVVM.Contrib.Samples.csproj
@@ -15,9 +15,9 @@
 		<Folder Include="wwwroot\" />
 	</ItemGroup>
 	<ItemGroup>
-		<PackageReference Include="Microsoft.AspNetCore" Version="1.0.3" />
-		<PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="1.1.0" />
-		<PackageReference Include="DotVVM.AspNetCore" Version="1.1.7" />
+		<PackageReference Include="Microsoft.AspNetCore" Version="2.0.1" />
+		<PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="2.0.1" />
+		<PackageReference Include="DotVVM.AspNetCore" Version="2.0.0-preview02-25978" />
 	</ItemGroup>
   <ItemGroup>
     <DotNetCliToolReference Include="DotVVM.Compiler.Light" Version="1.1.0.1" />
