--- a/Controls/_template/src/DotVVM.Contrib/DotVVM.Contrib.csproj
+++ b/Controls/_template/src/DotVVM.Contrib/DotVVM.Contrib.csproj
@@ -26,7 +26,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="DotVVM" Version="2.0.0-beta01" />
+    <PackageReference Include="DotVVM" Version="2.0.0-preview02-25902" />
   </ItemGroup>
 
 </Project>
