--- a/Controls/CkEditorMinimal/src/DotVVM.Contrib/DotVVM.Contrib.csproj
+++ b/Controls/CkEditorMinimal/src/DotVVM.Contrib/DotVVM.Contrib.csproj
@@ -26,7 +26,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="DotVVM" Version="2.0.0-preview02-25978" />
+    <PackageReference Include="DotVVM" Version="2.0.0-preview03-final" />
   </ItemGroup>
 
 </Project>
