--- a/Controls/_template/src/DotVVM.Contrib.Samples/DotVVM.Contrib.Samples.csproj
+++ b/Controls/_template/src/DotVVM.Contrib.Samples/DotVVM.Contrib.Samples.csproj
@@ -15,9 +15,10 @@
 		<Folder Include="wwwroot\" />
 	</ItemGroup>
 	<ItemGroup>
-		<PackageReference Include="Microsoft.AspNetCore" Version="2.0.1" />
-		<PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="2.0.1" />
-		<PackageReference Include="DotVVM.AspNetCore" Version="2.0.0-preview02-25902" />
+		<PackageReference Include="DotVVM" Version="2.0.0-preview03-final" />
+		<PackageReference Include="Microsoft.AspNetCore" Version="2.0.2" />
+		<PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="2.0.2" />
+		<PackageReference Include="DotVVM.AspNetCore" Version="2.0.0-preview03-final" />
 	</ItemGroup>
   <ItemGroup>
     <DotNetCliToolReference Include="DotVVM.Compiler.Light" Version="1.1.6.3" />
