--- a/Controls/CkEditorMinimal/src/DotVVM.Contrib.Tests2/DotVVM.Contrib.Tests.csproj
+++ b/Controls/CkEditorMinimal/src/DotVVM.Contrib.Tests2/DotVVM.Contrib.Tests.csproj
@@ -27,9 +27,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.7.0-preview-20180320-02" />
-    <PackageReference Include="MSTest.TestAdapter" Version="1.2.0" />
-    <PackageReference Include="MSTest.TestFramework" Version="1.2.0" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.7.0" />
+    <PackageReference Include="MSTest.TestAdapter" Version="1.2.1" />
+    <PackageReference Include="MSTest.TestFramework" Version="1.2.1" />
     <PackageReference Include="Riganti.Selenium.AssertApi" Version="2.0.1" />
     <PackageReference Include="Riganti.Selenium.MSTest2Integration" Version="2.0.1" />
   </ItemGroup>
