--- a/Controls/ReactBridge/src/DotVVM.Contrib/DotVVM.Contrib.csproj
+++ b/Controls/ReactBridge/src/DotVVM.Contrib/DotVVM.Contrib.csproj
@@ -35,7 +35,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="DotVVM" Version="2.0.0-preview02-25978" />
+    <PackageReference Include="DotVVM" Version="2.0.0-preview07-final" />
   </ItemGroup>
 
 </Project>
