--- a/Controls/TypeAhead/src/DotVVM.Contrib/DotVVM.Contrib.csproj
+++ b/Controls/TypeAhead/src/DotVVM.Contrib/DotVVM.Contrib.csproj
@@ -32,7 +32,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="DotVVM" Version="2.0.0-preview02-25902" />
+    <PackageReference Include="DotVVM" Version="2.0.0-preview07-final" />
   </ItemGroup>
 
 </Project>
