--- a/Controls/NoUiSlider/src/DotVVM.Contrib.Samples/DotVVM.Contrib.Samples.csproj
+++ b/Controls/NoUiSlider/src/DotVVM.Contrib.Samples/DotVVM.Contrib.Samples.csproj
@@ -17,7 +17,7 @@
 	<ItemGroup>
 		<PackageReference Include="Microsoft.AspNetCore" Version="2.0.1" />
 		<PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="2.0.1" />
-		<PackageReference Include="DotVVM.AspNetCore" Version="2.0.0-preview07-final" />
+		<PackageReference Include="DotVVM.AspNetCore" Version="2.0.0" />
 	</ItemGroup>
   <ItemGroup>
     <DotNetCliToolReference Include="DotVVM.Compiler.Light" Version="1.1.0.1" />
