--- a/Controls/Select2/src/DotVVM.Contrib/DotVVM.Contrib.csproj
+++ b/Controls/Select2/src/DotVVM.Contrib/DotVVM.Contrib.csproj
@@ -28,7 +28,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="DotVVM" Version="2.0.0-preview07-final" />
+    <PackageReference Include="DotVVM" Version="2.0.0" />
   </ItemGroup>
 
 </Project>
