--- a/Controls/TemplateSelector/src/DotVVM.Contrib/DotVVM.Contrib.csproj
+++ b/Controls/TemplateSelector/src/DotVVM.Contrib/DotVVM.Contrib.csproj
@@ -22,7 +22,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="DotVVM" Version="2.0.0-preview07-final" />
+    <PackageReference Include="DotVVM" Version="2.0.0" />
   </ItemGroup>
 
 </Project>
