--- a/Controls/CrystalReportViewer/src/DotVVM.Contrib/DotVVM.Contrib.csproj
+++ b/Controls/CrystalReportViewer/src/DotVVM.Contrib/DotVVM.Contrib.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFrameworks>net451</TargetFrameworks>
     <PackageId>DotVVM.Contrib.CrystalReportViewer</PackageId>
-    <PackageVersion>1.1.9.1-preview01-final</PackageVersion>
+    <PackageVersion>2.0.0</PackageVersion>
     <Authors>DotVVM Contrib</Authors>
     <Description>The CrystalReportViewer control for DotVVM made by DotVVM Contrib community.</Description>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
@@ -51,7 +51,7 @@
   </ItemGroup>
   
   <ItemGroup>
-    <PackageReference Include="DotVVM" Version="1.1.9.1" />
+    <PackageReference Include="DotVVM" Version="2.0.0" />
   </ItemGroup>
 
 </Project>
