--- a/Controls/Select2/src/DotVVM.Contrib.Samples/DotVVM.Contrib.Samples.csproj
+++ b/Controls/Select2/src/DotVVM.Contrib.Samples/DotVVM.Contrib.Samples.csproj
@@ -7,6 +7,7 @@
 	</ItemGroup>
 	<ItemGroup>
 		<None Remove="dotvvm_serialized_config.json.tmp" />
+		<None Remove="Views\Sample3.dothtml" />
 	</ItemGroup>
 	<ItemGroup>
 	  <Content Include="Views\_master.dotmaster" />
