--- a/Controls/CkEditorMinimal/src/DotVVM.Contrib.Samples/DotVVM.Contrib.Samples.csproj
+++ b/Controls/CkEditorMinimal/src/DotVVM.Contrib.Samples/DotVVM.Contrib.Samples.csproj
@@ -15,7 +15,7 @@
 		<Folder Include="wwwroot\Content\Lib\" />
 	</ItemGroup>
 	<ItemGroup>
-    <PackageReference Include="DotVVM.AspNetCore" Version="2.0.0" />
+    <PackageReference Include="DotVVM.AspNetCore" Version="2.1.0" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.6" />
     <PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="2.0.2" />
 	</ItemGroup>
@@ -23,6 +23,6 @@
     <DotNetCliToolReference Include="DotVVM.Compiler.Light" Version="1.1.0.1" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\DotVVM.Contrib\DotVVM.Contrib.csproj" />
+    <ProjectReference Include="..\DotVVM.Contrib\DotVVM.Contrib.CkEditorMinimal.csproj" />
   </ItemGroup>
 </Project>
