added basic styles

--- a/Controls/GoogleMap/src/DotVVM.Contrib/DotVVM.Contrib.csproj
+++ b/Controls/GoogleMap/src/DotVVM.Contrib/DotVVM.Contrib.csproj
@@ -22,7 +22,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Styles\DotVVM.Contrib.GoogleMap.css" />
+  </ItemGroup>
+
+  <ItemGroup>
     <EmbeddedResource Include="Scripts\DotVVM.Contrib.GoogleMap.js" />
+    <EmbeddedResource Include="Styles\DotVVM.Contrib.GoogleMap.css" />
   </ItemGroup>
 
   <ItemGroup>
