Added changed event to DateTimePicker

--- a/Controls/BootstrapDatepicker/src/DotVVM.Contrib.Samples/DotVVM.Contrib.Samples.csproj
+++ b/Controls/BootstrapDatepicker/src/DotVVM.Contrib.Samples/DotVVM.Contrib.Samples.csproj
@@ -9,6 +9,7 @@
 		<None Remove="dotvvm_serialized_config.json.tmp" />
 		<None Remove="Views\Sample2.dothtml" />
 		<None Remove="Views\Sample3.dothtml" />
+		<None Remove="Views\Sample4.dothtml" />
 	</ItemGroup>
 	<ItemGroup>
 	  <Content Include="Views\_master.dotmaster" />
