--- a/Controls/CrystalReportViewer/src/DotVVM.Contrib.Samples/packages.config
+++ b/Controls/CrystalReportViewer/src/DotVVM.Contrib.Samples/packages.config
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Ben.Demystifier" version="0.1.0" targetFramework="net471" />
-  <package id="DotVVM" version="2.3.3" targetFramework="net471" />
-  <package id="DotVVM.Core" version="2.3.3" targetFramework="net471" />
+  <package id="DotVVM" version="3.0.2" targetFramework="net471" />
+  <package id="DotVVM.Core" version="3.0.2" targetFramework="net471" />
   <package id="DotVVM.Owin" version="2.3.3" targetFramework="net471" />
   <package id="Microsoft.CodeAnalysis.Analyzers" version="1.0.0" targetFramework="net471" />
   <package id="Microsoft.CodeAnalysis.Common" version="1.0.0" targetFramework="net471" />
@@ -17,6 +17,7 @@
   <package id="Microsoft.Owin.Security" version="4.0.0" targetFramework="net471" />
   <package id="Microsoft.Owin.StaticFiles" version="4.0.0" targetFramework="net471" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net471" />
+  <package id="Newtonsoft.Json.Bson" version="1.0.1" targetFramework="net471" />
   <package id="Owin" version="1.0" targetFramework="net471" />
   <package id="System.Collections" version="4.0.11" targetFramework="net471" />
   <package id="System.Collections.Concurrent" version="4.0.12" targetFramework="net471" />
