--- a/Controls/BootstrapDatepicker/src/DotVVM.Contrib/DotVVM.Contrib.csproj
+++ b/Controls/BootstrapDatepicker/src/DotVVM.Contrib/DotVVM.Contrib.csproj
@@ -197,7 +197,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="DotVVM" Version="2.4.0.1" />
+    <PackageReference Include="DotVVM" Version="$(DotvvmVersion)" />
   </ItemGroup>
 
 </Project>
