--- a/Controls/CkEditorMinimal/src/DotVVM.Contrib.Samples/DotVVM.Contrib.Samples.csproj
+++ b/Controls/CkEditorMinimal/src/DotVVM.Contrib.Samples/DotVVM.Contrib.Samples.csproj
@@ -15,9 +15,9 @@
 		<Folder Include="wwwroot\Content\Lib\" />
 	</ItemGroup>
 	<ItemGroup>
-    <PackageReference Include="DotVVM.AspNetCore" Version="2.4.0.1" />
-    <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.6" />
-    <PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="2.0.2" />
+		<PackageReference Include="DotVVM.AspNetCore" Version="$(DotvvmVersion)" />
+		<PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.6" />
+		<PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="2.0.2" />
 	</ItemGroup>
   <ItemGroup>
     <DotNetCliToolReference Include="DotVVM.Compiler.Light" Version="1.1.0.1" />
