--- a/Controls/FAIcon/src/DotVVM.Contrib/DotVVM.Contrib.FAIcon.csproj
+++ b/Controls/FAIcon/src/DotVVM.Contrib/DotVVM.Contrib.FAIcon.csproj
@@ -25,7 +25,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="DotVVM" Version="3.0.1" />
+    <PackageReference Include="DotVVM" Version="$(DotvvmVersion)" />
   </ItemGroup>
 
 </Project>
