--- a/Controls/FileUploadNoIframe/src/DotVVM.Contrib.Samples/DotVVM.Contrib.Samples.csproj
+++ b/Controls/FileUploadNoIframe/src/DotVVM.Contrib.Samples/DotVVM.Contrib.Samples.csproj
@@ -18,7 +18,7 @@
 	<ItemGroup>
 		<PackageReference Include="Microsoft.AspNetCore" Version="2.0.2" />
 		<PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="2.0.2" />
-		<PackageReference Include="DotVVM.AspNetCore" Version="2.5.2" />
+		<PackageReference Include="DotVVM.AspNetCore" Version="$(DotvvmVersion)" />
 	</ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DotVVM.Contrib\DotVVM.Contrib.csproj" />
