--- a/Controls/FileUploadNoIframe/src/DotVVM.Contrib/DotVVM.Contrib.csproj
+++ b/Controls/FileUploadNoIframe/src/DotVVM.Contrib/DotVVM.Contrib.csproj
@@ -27,7 +27,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="DotVVM" Version="2.5.2" />
+    <PackageReference Include="DotVVM" Version="$(DotvvmVersion)" />
   </ItemGroup>
 
 </Project>
