--- a/Controls/GoogleAnalyticsJavascript/src/DotVVM.Contrib/DotVVM.Contrib.GoogleAnalyticsJavascript.csproj
+++ b/Controls/GoogleAnalyticsJavascript/src/DotVVM.Contrib/DotVVM.Contrib.GoogleAnalyticsJavascript.csproj
@@ -22,7 +22,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="DotVVM" Version="2.4.0.1" />
+    <PackageReference Include="DotVVM" Version="$(DotvvmVersion)" />
   </ItemGroup>
 
   <ItemGroup Condition=" '$(TargetFramework)' == 'netstandard2.0' ">
