--- a/Controls/GoogleMap/src/DotVVM.Contrib.Samples/DotVVM.Contrib.Samples.csproj
+++ b/Controls/GoogleMap/src/DotVVM.Contrib.Samples/DotVVM.Contrib.Samples.csproj
@@ -17,10 +17,9 @@
 		<Folder Include="wwwroot\" />
 	</ItemGroup>
 	<ItemGroup>
-		<PackageReference Include="DotVVM" Version="2.4.0.1" />
 		<PackageReference Include="Microsoft.AspNetCore" Version="2.0.2" />
 		<PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="2.0.2" />
-		<PackageReference Include="DotVVM.AspNetCore" Version="2.4.0.1" />
+		<PackageReference Include="DotVVM.AspNetCore" Version="$(DotvvmVersion)" />
 		<PackageReference Include="System.Text.Encoding.CodePages" Version="4.5.1" />
 	</ItemGroup>
   <ItemGroup>
