--- a/Controls/NoUiSlider/src/DotVVM.Contrib/DotVVM.Contrib.csproj
+++ b/Controls/NoUiSlider/src/DotVVM.Contrib/DotVVM.Contrib.csproj
@@ -29,8 +29,11 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="DotVVM" Version="2.4.0.1" />
-    <PackageReference Include="Microsoft.TypeScript.MSBuild" Version="2.3.1" />
+    <PackageReference Include="DotVVM" Version="$(DotvvmVersion)" />
+    <PackageReference Include="Microsoft.TypeScript.MSBuild" Version="2.3.1">
+	   <PrivateAssets>all</PrivateAssets>
+	   <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+	</PackageReference>
   </ItemGroup>
 
   <ItemGroup>
