--- a/Controls/PolicyView/src/DotVVM.Contrib/DotVVM.Contrib.csproj
+++ b/Controls/PolicyView/src/DotVVM.Contrib/DotVVM.Contrib.csproj
@@ -21,7 +21,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="DotVVM" Version="2.4.0.1" />
+    <PackageReference Include="DotVVM" Version="$(DotvvmVersion)" />
     <PackageReference Include="Microsoft.AspNetCore.Authorization" Version="2.0.4" />
   </ItemGroup>
 
