--- a/Controls/PolymorphTemplateSelector/src/DotVVM.Contrib/DotVVM.Contrib.csproj
+++ b/Controls/PolymorphTemplateSelector/src/DotVVM.Contrib/DotVVM.Contrib.csproj
@@ -23,7 +23,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="DotVVM" Version="2.5.2" />
+    <PackageReference Include="DotVVM" Version="$(DotvvmVersion)" />
   </ItemGroup>
 
 </Project>
