--- a/Controls/QrCode/src/DotVVM.Contrib.Samples/DotVVM.Contrib.Samples.csproj
+++ b/Controls/QrCode/src/DotVVM.Contrib.Samples/DotVVM.Contrib.Samples.csproj
@@ -13,10 +13,9 @@
 		<Folder Include="wwwroot\" />
 	</ItemGroup>
 	<ItemGroup>
-		<PackageReference Include="DotVVM" Version="2.4.0.1" />
 		<PackageReference Include="Microsoft.AspNetCore" Version="2.0.2" />
 		<PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="2.0.2" />
-		<PackageReference Include="DotVVM.AspNetCore" Version="2.4.0.1" />
+		<PackageReference Include="DotVVM.AspNetCore" Version="$(DotvvmVersion)" />
 		<PackageReference Include="Microsoft.Web.LibraryManager.Build" Version="1.0.172" />
 	</ItemGroup>
 	<ItemGroup>
