--- a/Controls/TemplateSelector/src/DotVVM.Contrib/DotVVM.Contrib.csproj
+++ b/Controls/TemplateSelector/src/DotVVM.Contrib/DotVVM.Contrib.csproj
@@ -22,7 +22,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="DotVVM" Version="2.4.0.1" />
+    <PackageReference Include="DotVVM" Version="$(DotvvmVersion)" />
   </ItemGroup>
 
 </Project>
