--- a/Controls/_template/src/DotVVM.Contrib/DotVVM.Contrib.csproj
+++ b/Controls/_template/src/DotVVM.Contrib/DotVVM.Contrib.csproj
@@ -27,7 +27,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="DotVVM" Version="2.1.0" />
+    <PackageReference Include="DotVVM" Version="$(DotvvmVersion)" />
   </ItemGroup>
 
 </Project>
