--- a/Controls/CrystalReportViewer/src/DotVVM.Contrib/DotVVM.Contrib.csproj
+++ b/Controls/CrystalReportViewer/src/DotVVM.Contrib/DotVVM.Contrib.csproj
@@ -51,7 +51,7 @@
   </ItemGroup>
   
   <ItemGroup>
-    <PackageReference Include="DotVVM" Version="2.3.3" />
+    <PackageReference Include="DotVVM" Version="$(DotvvmVersion)" />
   </ItemGroup>
 
 </Project>
