CookieBar - fixes and readme updates

--- a/Controls/CookieBar/src/DotVVM.Contrib.Samples/DotVVM.Contrib.Samples.csproj
+++ b/Controls/CookieBar/src/DotVVM.Contrib.Samples/DotVVM.Contrib.Samples.csproj
@@ -7,6 +7,7 @@
 	</ItemGroup>
 	<ItemGroup>
 		<None Remove="dotvvm_serialized_config.json.tmp" />
+		<None Remove="Views\Sample2.dothtml" />
 	</ItemGroup>
 	<ItemGroup>
 		<Content Include="Views\_master.dotmaster" />
