--- a/Controls/CookieBar/src/DotVVM.Contrib/DotVVM.Contrib.csproj
+++ b/Controls/CookieBar/src/DotVVM.Contrib/DotVVM.Contrib.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFrameworks>netcoreapp2.0;net451</TargetFrameworks>
+		<TargetFrameworks>netstandard2.0</TargetFrameworks>
 		<PackageId>DotVVM.Contrib.CookieBar</PackageId>
 		<PackageVersion>0.0.1</PackageVersion>
 		<Authors>DotVVM Contrib</Authors>
@@ -47,6 +47,8 @@
 			<PrivateAssets>all</PrivateAssets>
 		</PackageReference>
 		<PackageReference Include="DotVVM" Version="$(DotvvmVersion)" />
+		<PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
+		<PackageReference Include="RecordException" Version="0.1.2" />
 	</ItemGroup>
 
 	<ItemGroup>
